syntax = "proto3";

package NKikimrBlobStorage;

message TPDiskSpaceColor {
    enum E {
        GREEN = 0;
        CYAN = 10;
        LIGHT_YELLOW = 15;
        YELLOW = 20;
        LIGHT_ORANGE = 30;
        PRE_ORANGE = 35;
        ORANGE = 40;
        RED = 50;
        BLACK = 60;
    }
}
